typo in ENR formula

--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -388,9 +388,9 @@ temperatures $T_\mathrm{H/C}$, and $T_\mathrm{e}$ is the noise temperature of th
 device. $T_\mathrm{C} = 295$~K is the physical temperature of the noise diode, and 
 $T_\mathrm{H}$ may be solved from the definition of $\textit{ENR}$:
 \begin{equation}\label{e:ENR}
-\mathit{ENR} = 10 \lg \left( \frac{T_\mathrm{H}}{T_\mathrm{C}} - 1 \right) 
+\mathit{ENR} = 10 \lg \left( \frac{T_\mathrm{H}}{T_\mathrm{0}} - 1 \right) 
 	\quad\Rightarrow\quad
-	T_\mathrm{H} = T_\mathrm{C} \left( 10^\frac{\mathit{ENR}}{10} + 1 \right).
+	T_\mathrm{H} = T_\mathrm{0} \left( 10^\frac{\mathit{ENR}}{10} + 1 \right).
 \end{equation}
 Obtained noise temperature $T_\mathrm{e}$ may be converted to noise factor $F$ or figure 
 $F_\mathrm{dB}$ using the following relationship:
